# core

./: Cargo.toml  README.md
src/: game.rs  lib.rs  network.rs
src/game/: asteroid.rs  collision_detection.rs  game_object.rs  material.rs  player.rs  projectile.rs  spacecraft.rs  spacecraft_structure.rs  star_base.rs
src/game/spacecraft/: component.rs
src/game/spacecraft/component/: block.rs  engine.rs  orientation.rs  weapon.rs
src/game/star_base/: hangar.rs
