[package]
name = "spacecraft-core"
version = "0.1.0"
edition = "2021"
rust="stable"
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.23"
glam = { version = "0.23", features = ["serde", "rand"] }
rand = "0.8"
rmp-serde = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
